After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 136730 - Opening Lotus/Excel worksheet shows no data
Opening Lotus/Excel worksheet shows no data
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.1.x
Other Linux
: Normal major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-03-10 09:43 UTC by Ulrich.Windl
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: 2.1/2.2


Attachments
Sample file that did not work (created by iozone) (52.15 KB, application/octet-stream)
2004-03-10 09:44 UTC, Ulrich.Windl
Details

Description Ulrich.Windl 2004-03-10 09:43:07 UTC
When opening a Lotus/Excel worksheet (*.wks) file, no data appear. The same
file can be imported into OpenOffice and Excel/2000 without problem
however. This is not how things should be. Version of gnumeric is
gnumeric2-1.1.20-36.
Comment 1 Ulrich.Windl 2004-03-10 09:44:40 UTC
Created attachment 25442 [details]
Sample file that did not work (created by iozone)
Comment 2 Ulrich.Windl 2004-03-11 07:31:02 UTC
I was unable to find a utility or menu entry corresponding to
"configurable text import". Where should that be?
Comment 3 Ulrich.Windl 2004-03-11 10:35:24 UTC
Oops: My last comment actually refers to bug #136729 (too many
different bugzillas out there; your verion continues with the next bug
automatically, so the comment ended here).
Comment 4 Jody Goldberg 2004-03-11 15:34:26 UTC
What type of file is that supposed to be ?  It does not conform to our
specs of what a .wks file should look like.  There is a bug in that
current (1.2.x) releases recognize it as old pre-excel95 xls. 
However, that is secondary.  My copy of oo crashes opening it.
Comment 5 Ulrich.Windl 2004-03-11 15:50:27 UTC
As indicated in the comment for the attachment, the file was created
with iozone (http://www.iozone.org/). In the source release the file
src/current/libbif.c states that the file format is intended to be
"Excel worksheet Microsoft BIFF format(...) The Excel version is set
to 2.0 so that it will work with all versions of Excel". Author of the
file is given as "Don Capps (Hewlett Packard), 1999". So it seems the
format should be well-know enough in the meantime ;-)
Comment 6 Jody Goldberg 2004-03-11 16:17:56 UTC
ok, that's much simpler.  The file really is supposed to be an old xls
file.  No problem, I'll have a look at why we're havingtrouble parsing
it this evening.  Current releases read bits of it.  This is the first
test of something that old.
Comment 7 Jody Goldberg 2004-03-18 01:22:21 UTC
Fixed in 1.2.8